--- a/src/App.css
+++ b/src/App.css
@@ -6,16 +6,58 @@
   transition: filter 300ms;
 }
 .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+  filter: drop-shadow(0 0 2em #dc3545);
 }
 .logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+  filter: drop-shadow(0 0 2em #dc3545);
 }
 
 .table-row:hover {
   transform: scale(1.01);
   transition: transform 0.2s ease-in-out;
 }
+
+.form-control:focus {
+  outline: none !important;
+  box-shadow: none !important;
+  border-color: #DDD !important;
+}
+
+.pagination-danger .page-item.active .page-link {
+  background-color: #dc3545 !important;
+  border-color: #dc3545 !important;
+  color: white !important;
+}
+.pagination-danger .page-link:hover {
+  color: #91232e !important;
+}
+
+.pagination-danger .page-link {
+  color: #dc3545 !important;
+}
+
+.pagination-danger .page-link:focus {
+  box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.25) !important;
+}
+
+
+  .custom-active-page .page-link {
+    background-color: #dc3545 !important;
+    border-color: #dc3545 !important;
+    color: white !important;
+  }
+  
+  .pagination .page-link {
+    color: #dc3545;
+  }
+
+  .pagination .page-link:hover {
+    color: #91232e;
+  }
+  
+  .pagination .page-link:focus {
+    box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.25);
+  }
 
 @keyframes logo-spin {
   from {
